syntax = "proto3";

package proto;

option go_package = "github.com/almat-kst10/message_micro/proto";

service MessageService {
    rpc RoomList (RoomListRequest) returns (RoomListResponse);
    rpc ChatsList (ChatsListRequest) returns (ChatsListResponse);
    rpc SendMessage (SendMessageRequest) returns (SendMessageResponse);
    rpc GetMessage (GetMessageRequest) returns (GetMessageResponse);
}

message RoomListRequest {
    int32 profile_id = 1;
}

message RoomListResponse {
    repeated RoomGeneral room_general = 1;
}

message RoomGeneral {
    int32 room_id = 1;
    string room_tile = 2;
    int32 client_id = 3;
    int32 profile_id = 4;
    string profile_name = 5;
    string profile_surname = 6;
    int32 role_id = 7;
    string role_name = 8;
    bool is_muted = 9;
    bool is_typing = 10; 
}

message ChatsListRequest {
    int32 profile_id = 1;
}

message Chat {
    int32 my_profile_id = 1;
    int32 user2_profile_id = 2;
    string last_message = 3;
    bool is_read = 4;
    int32 count_new_msg = 5;
    bool is_visible = 6;
}

message ChatsListResponse {
    repeated Chat chats = 1;
}

message SendMessageRequest {
    int32 sender_id = 1;
    int32 receiver_id = 2;
    string text = 3;
}

message SendMessageResponse {
    bool success = 1;
}

message GetMessageRequest {
    int32 user1_id = 1;
    int32 user2_id = 2;
}

message GetMessageResponse {
    repeated Message messages = 1;
}

message Message {
    int32 id = 1;
    int32 sender_id = 2;
    int32 receiver_id = 3;
    string text = 4;
    string timestamp = 5;
}